--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Examentecnico</string>
     <string name="singout">Cerrar sesion</string>
+    <string name="listinfo">Lista</string>
+
 </resources>
